--- a/models/db.ipynb
+++ b/models/db.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "bf286405",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,10 @@
       "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     /root/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n"
      ]
     }
    ],
@@ -42,7 +45,7 @@
     "nltk.download(\"punkt\")\n",
     "nltk.download(\"punkt_tab\")\n",
     "nltk.download(\"wordnet\")\n",
-    "nltk.download(\"averaged_perceptron_tagger\")\n",
+    "nltk.download(\"averaged_perceptron_tagger_eng\")\n",
     "\n",
     "stop_words = set(stopwords.words(\"english\"))"
    ]
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ebff9754",
    "metadata": {},
    "outputs": [
@@ -86,39 +89,32 @@
     }
    ],
    "source": [
-    "train.keys()\n",
-    "len(train['premise'])\n",
     "train['premise']['0'], train['hypothesis']['0'], train['label']['0']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5c15c0da",
+   "execution_count": null,
+   "id": "2074eeab",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LookupError",
-     "evalue": "\n**********************************************************************\n  Resource \u001b[93maveraged_perceptron_tagger_eng\u001b[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001b[31m>>> import nltk\n  >>> nltk.download('averaged_perceptron_tagger_eng')\n  \u001b[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001b[93mtaggers/averaged_perceptron_tagger_eng/\u001b[0m\n\n  Searched in:\n    - '/root/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/share/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 49\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m tokens\n\u001b[1;32m     48\u001b[0m embedder \u001b[38;5;241m=\u001b[39m Embedder(Config)\n\u001b[0;32m---> 49\u001b[0m train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpremise\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[43membedder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membed\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpremise\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[22], line 44\u001b[0m, in \u001b[0;36mEmbedder.embed\u001b[0;34m(self, sentence)\u001b[0m\n\u001b[1;32m     41\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m [token \u001b[38;5;28;01mfor\u001b[39;00m token \u001b[38;5;129;01min\u001b[39;00m tokens \u001b[38;5;28;01mif\u001b[39;00m token \u001b[38;5;129;01mand\u001b[39;00m token \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstop_words]\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mpos:\n\u001b[0;32m---> 44\u001b[0m     tokens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpos_tagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m tokens\n",
-      "File \u001b[0;32m/mnt/c/Natural-Language-Processing/venv/lib/python3.10/site-packages/nltk/tag/__init__.py:168\u001b[0m, in \u001b[0;36mpos_tag\u001b[0;34m(tokens, tagset, lang)\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mpos_tag\u001b[39m(tokens, tagset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, lang\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meng\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    144\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    145\u001b[0m \u001b[38;5;124;03m    Use NLTK's currently recommended part of speech tagger to\u001b[39;00m\n\u001b[1;32m    146\u001b[0m \u001b[38;5;124;03m    tag the given list of tokens.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;124;03m    :rtype: list(tuple(str, str))\u001b[39;00m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 168\u001b[0m     tagger \u001b[38;5;241m=\u001b[39m \u001b[43m_get_tagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlang\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    169\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _pos_tag(tokens, tagset, tagger, lang)\n",
-      "File \u001b[0;32m/mnt/c/Natural-Language-Processing/venv/lib/python3.10/site-packages/nltk/tag/__init__.py:110\u001b[0m, in \u001b[0;36m_get_tagger\u001b[0;34m(lang)\u001b[0m\n\u001b[1;32m    108\u001b[0m     tagger \u001b[38;5;241m=\u001b[39m PerceptronTagger(lang\u001b[38;5;241m=\u001b[39mlang)\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 110\u001b[0m     tagger \u001b[38;5;241m=\u001b[39m \u001b[43mPerceptronTagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m tagger\n",
-      "File \u001b[0;32m/mnt/c/Natural-Language-Processing/venv/lib/python3.10/site-packages/nltk/tag/perceptron.py:183\u001b[0m, in \u001b[0;36mPerceptronTagger.__init__\u001b[0;34m(self, load, lang)\u001b[0m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m load:\n\u001b[0;32m--> 183\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_from_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlang\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/mnt/c/Natural-Language-Processing/venv/lib/python3.10/site-packages/nltk/tag/perceptron.py:273\u001b[0m, in \u001b[0;36mPerceptronTagger.load_from_json\u001b[0;34m(self, lang)\u001b[0m\n\u001b[1;32m    271\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload_from_json\u001b[39m(\u001b[38;5;28mself\u001b[39m, lang\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meng\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    272\u001b[0m     \u001b[38;5;66;03m# Automatically find path to the tagger if location is not specified.\u001b[39;00m\n\u001b[0;32m--> 273\u001b[0m     loc \u001b[38;5;241m=\u001b[39m \u001b[43mfind\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtaggers/averaged_perceptron_tagger_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mlang\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    274\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(loc \u001b[38;5;241m+\u001b[39m TAGGER_JSONS[lang][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;28;01mas\u001b[39;00m fin:\n\u001b[1;32m    275\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mweights \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(fin)\n",
-      "File \u001b[0;32m/mnt/c/Natural-Language-Processing/venv/lib/python3.10/site-packages/nltk/data.py:579\u001b[0m, in \u001b[0;36mfind\u001b[0;34m(resource_name, paths)\u001b[0m\n\u001b[1;32m    577\u001b[0m sep \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m70\u001b[39m\n\u001b[1;32m    578\u001b[0m resource_not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00msep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mmsg\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00msep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 579\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mLookupError\u001b[39;00m(resource_not_found)\n",
-      "\u001b[0;31mLookupError\u001b[0m: \n**********************************************************************\n  Resource \u001b[93maveraged_perceptron_tagger_eng\u001b[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001b[31m>>> import nltk\n  >>> nltk.download('averaged_perceptron_tagger_eng')\n  \u001b[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001b[93mtaggers/averaged_perceptron_tagger_eng/\u001b[0m\n\n  Searched in:\n    - '/root/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/share/nltk_data'\n    - '/mnt/c/Natural-Language-Processing/venv/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('Pluto rotates once on its axis every 6.39 Earth days;',\n",
+       " ['pluto', 'rotates', 'axis', 'every', '639', 'earth', 'days'])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
     "from nltk.stem import WordNetLemmatizer, PorterStemmer, LancasterStemmer\n",
     "from nltk import pos_tag\n",
+    "import numpy as np\n",
     "\n",
     "class Config:\n",
     "    stem = False\n",
@@ -128,12 +124,15 @@
     "    tokenize = True\n",
     "\n",
     "    clean_text = True\n",
-    "    regex = r\"[^a-zA-Z0-9\\-\\.\\s]\"\n",
+    "    regex = r\"[^a-z0-9\\-\\s]\"\n",
     "\n",
-    "    pos = True\n",
+    "    pos = False\n",
     "    pos_tagger = pos_tag\n",
     "\n",
+    "    lower = True\n",
+    "\n",
     "    stopwords = set(stopwords.words('english'))\n",
+    "\n",
     "\n",
     "class Embedder():\n",
     "    def __init__(self, cfg: Config) -> None:\n",
@@ -145,6 +144,7 @@
     "\n",
     "\n",
     "    def embed(self, sentence: str) -> list[str]:\n",
+    "        tokens = [sentence]\n",
     "        if self.cfg.tokenize:\n",
     "            tokens = nltk.word_tokenize(sentence)\n",
     "\n",
@@ -155,7 +155,8 @@
     "            tokens = [self.stemmer.stem(token) for token in tokens]\n",
     "\n",
     "        if self.cfg.clean_text:\n",
-    "            tokens = [re.sub(self.cfg.regex, '', token) for token in tokens]\n",
+    "                \n",
+    "            tokens = [re.sub(self.cfg.regex, '', token.lower() if self.cfg.lower else token) for token in tokens]\n",
     "            tokens = [token for token in tokens if token and token not in self.stop_words]\n",
     "\n",
     "        if self.cfg.pos:\n",
@@ -163,6 +164,40 @@
     "        \n",
     "        return tokens\n",
     "    \n",
+    "    def embed_data(self, json):\n",
+    "        len = len(json['label'])\n",
+    "        print(len)\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset,  DataLoader\n",
+    "\n",
+    "\n",
+    "class MedicalDataset(Dataset):\n",
+    "  def __init__(self, df, embed_model):\n",
+    "    self.df = df\n",
+    "    self.embed_model = embed_model\n",
+    "\n",
+    "    self.max_length = df['clean_text'].str.len().max()\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return len(self.df)\n",
+    "\n",
+    "  def __getitem__(self, index):\n",
+    "    clean = self.df[\"clean_text\"].iloc[index]\n",
+    "    embed = np.array([self.embed_model.wv[word] for word in clean if word in self.embed_model.wv])\n",
+    "    label = int(self.df[\"condition_label\"].iloc[index]) - 1\n",
+    "\n",
+    "    embed = torch.tensor(embed, dtype=torch.float32)\n",
+    "    label = torch.tensor(label, dtype=torch.long)\n",
+    "\n",
+    "    return embed, label\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "embedder = Embedder(Config)\n",
     "train['premise']['0'], embedder.embed(train['premise']['0'])"
    ]
@@ -170,15 +205,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2074eeab",
+   "id": "aa8936db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "\n",
+    "class inferenceDataset(Dataset)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
