--- a/CITS4012_YourGroupID.ipynb
+++ b/CITS4012_YourGroupID.ipynb
@@ -91,7 +91,7 @@
         "\n",
         "train_file = f\"{db_path}/train.json\"\n",
         "test_file = f\"{db_path}/test.json\"\n",
-        "val_file = f\"{db_path}/train.json\""
+        "val_file = f\"{db_path}/validation.json\""
       ]
     },
     {
@@ -325,14 +325,24 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "\n",
         "train_df = pd.DataFrame({\n",
         "    \"label\": clean_train[\"label\"],\n",
         "    \"premise\": clean_train[\"premise\"],\n",
         "    \"hypothesis\": clean_train[\"hypothesis\"]\n",
         "})\n",
         "\n",
-        "# reset index if needed\n",
+        "val_df = pd.DataFrame({\n",
+        "    \"label\": clean_val[\"label\"],\n",
+        "    \"premise\": clean_val[\"premise\"],\n",
+        "    \"hypothesis\": clean_val[\"hypothesis\"]\n",
+        "})\n",
+        "\n",
+        "test_df = pd.DataFrame({\n",
+        "    \"label\": clean_test[\"label\"],\n",
+        "    \"premise\": clean_test[\"premise\"],\n",
+        "    \"hypothesis\": clean_test[\"hypothesis\"]\n",
+        "})\n",
+        "\n",
         "train_df = train_df.reset_index(drop=True)\n",
         "train_df.head()"
       ]
@@ -364,14 +374,14 @@
         "\n",
         "    p_embed = torch.tensor(p_embed, dtype=torch.float32)\n",
         "    h_embed = torch.tensor(h_embed, dtype=torch.float32)\n",
-        "    label = torch.tensor(label, dtype=torch.long)\n",
+        "    label = torch.tensor(label, dtype=torch.float32).unsqueeze(0)\n",
         "\n",
         "    return p_embed, h_embed, label\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -409,10 +419,30 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(2886, 163, 266)"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "train_db = nliDataset(train_df, embed_model=embed_model)\n",
-        "loader = DataLoader(train_db, batch_size=8, shuffle=True, collate_fn=collate_fn)\n"
+        "trainloader = DataLoader(train_db, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
+        "val_db = nliDataset(val_df, embed_model=embed_model)\n",
+        "valloader = DataLoader(val_db, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
+        "test_db = nliDataset(test_df, embed_model=embed_model)\n",
+        "testloader = DataLoader(test_db, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
+        "\n",
+        "len(trainloader), len(valloader), len(testloader)\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -429,12 +459,149 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Task"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from collections import Counter\n",
+        "from torch.utils.data import WeightedRandomSampler\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "class Task():\n",
+        "  def __init__(self, model, \n",
+        "                train_df, \n",
+        "                val_df, \n",
+        "                save_path, \n",
+        "                collate_fn=collate_fn, \n",
+        "                optimizer=None,\n",
+        "                loss_fn=None,\n",
+        "                device=\"cpu\", \n",
+        "                batch_size=16, \n",
+        "                weighted_sampling=False) -> None:\n",
+        "\n",
+        "    self.train_df = train_df\n",
+        "    self.val_df = val_df\n",
+        "\n",
+        "    self.optimizer = optimizer\n",
+        "    self.loss_fn = loss_fn\n",
+        "\n",
+        "    self.save_path = save_path\n",
+        "\n",
+        "    if weighted_sampling:\n",
+        "      labels = train_df['label'].values\n",
+        "      class_counts = Counter(labels)\n",
+        "      num_samples = len(labels)\n",
+        "      class_weights = {cls: num_samples/count for cls, count in class_counts.items()}\n",
+        "      sample_weights = [class_weights[label] for label in labels]\n",
+        "      sampler = WeightedRandomSampler(sample_weights, num_samples=num_samples, replacement=True)\n",
+        "    else:\n",
+        "      sampler = None\n",
+        "    \n",
+        "    train_db = nliDataset(train_df, embed_model=embed_model)\n",
+        "    val_db = nliDataset(val_df, embed_model=embed_model)\n",
+        "\n",
+        "    self.train_loader = DataLoader(train_db, batch_size=batch_size, sampler=sampler, collate_fn=collate_fn)\n",
+        "    self.val_loader = DataLoader(val_db, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
+        "\n",
+        "    self.model = model\n",
+        "    self.device = device\n",
+        "\n",
+        "\n",
+        "    self.model = model.to(device)\n",
+        "\n",
+        "    self.losses = {}\n",
+        "    self.losses[\"train\"] = []\n",
+        "    self.losses[\"val\"] = []\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def train_epoch(self):\n",
+        "    self.model.train()\n",
+        "    epoch_loss = 0\n",
+        "    for batch in tqdm(self.train_loader, total=len(self.train_loader), desc=\"Training\"):\n",
+        "        p_padded, h_padded, labels, p_lengths, h_lengths = batch\n",
+        "\n",
+        "        p_padded = p_padded.to(self.device)\n",
+        "        h_padded = h_padded.to(self.device)\n",
+        "        labels = labels.to(self.device)\n",
+        "        outputs = self.model(p_padded, h_padded, p_lengths, h_lengths)\n",
+        "\n",
+        "        loss = self.loss_fn(outputs, labels)\n",
+        "\n",
+        "        self.optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        self.optimizer.step()\n",
+        "\n",
+        "        epoch_loss += loss.item()\n",
+        "\n",
+        "    epoch_loss /= len(self.train_loader)\n",
+        "    return epoch_loss\n",
+        "  \n",
+        "\n",
+        "  def validate_epoch(self):\n",
+        "    self.model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        val_loss = 0\n",
+        "        correct = 0\n",
+        "        total = 0\n",
+        "\n",
+        "        for batch in tqdm(self.val_loader, total=len(self.val_loader), desc=\"Validating\"):\n",
+        "            p_padded, h_padded, labels, p_lengths, h_lengths = batch\n",
+        "\n",
+        "            p_padded = p_padded.to(self.device)\n",
+        "            h_padded = h_padded.to(self.device)\n",
+        "            labels = labels.to(self.device)\n",
+        "\n",
+        "            outputs = self.model(p_padded, h_padded, p_lengths, h_lengths)\n",
+        "            loss = self.loss_fn(outputs, labels)\n",
+        "            val_loss += loss.item()\n",
+        "\n",
+        "            _, predicted = torch.max(outputs, dim=1)\n",
+        "            correct += (predicted == labels).sum().item()\n",
+        "            total += labels.size(0)\n",
+        "\n",
+        "        val_loss /= len(self.val_loader)\n",
+        "        accuracy = correct / total\n",
+        "    return val_loss, accuracy\n",
+        "     \n",
+        "\n",
+        "  def fit(self, epochs):\n",
+        "    best_val_loss = float('inf')\n",
+        "    for epoch in range(epochs):\n",
+        "        train_loss = self.train_epoch()\n",
+        "        val_loss, val_acc = self.validate_epoch()\n",
+        "\n",
+        "        self.losses[\"train\"].append(train_loss)\n",
+        "        self.losses[\"val\"].append(val_loss)\n",
+        "\n",
+        "        print(f\"Epoch {epoch+1}/{epochs}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.4f}\")\n",
+        "        if val_loss < best_val_loss:\n",
+        "            best_val_loss = val_loss\n",
+        "            torch.save(self.model.state_dict(), self.save_path)\n",
+        "            print(f\"Model saved to {self.save_path}\")\n",
+        "\n",
+        "    print(\"Training complete.\")\n",
+        "    self.model.load_state_dict(torch.load(self.save_path))\n",
+        "    return self.losses\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## BiLSTM"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {
         "id": "QIEqDDT78q39"
       },
@@ -443,7 +610,7 @@
         "from torch.nn.utils.rnn import pack_padded_sequence\n",
         "\n",
         "class twin_LSTM(nn.Module):\n",
-        "  def __init__(self, input_size=100, hidden_size=128, output_size=2, dropout=0.5, bidirectional=True):\n",
+        "  def __init__(self, input_size=100, hidden_size=128, output_size=1, dropout=0.5, bidirectional=True):\n",
         "    super().__init__()\n",
         "    self.hidden_size = hidden_size\n",
         "\n",
@@ -452,7 +619,8 @@
         "\n",
         "    self.fc = nn.Sequential(\n",
         "      nn.Dropout(dropout),\n",
-        "      nn.Linear(self.hidden_size * (2 if bidirectional else 1), output_size)\n",
+        "      nn.Linear(self.hidden_size * (2 if bidirectional else 1), output_size),\n",
+        "      nn.Sigmoid()\n",
         "    )\n",
         "\n",
         "  def forward(self, px, hx, plengths, hlengths):\n",
@@ -473,25 +641,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "torch.Size([8, 2])\n"
+            "torch.Size([8, 18, 100]) torch.Size([8, 10, 100]) torch.Size([8, 1]) torch.Size([8]) torch.Size([8])\n",
+            "tensor([[0.4677],\n",
+            "        [0.4955],\n",
+            "        [0.5130],\n",
+            "        [0.5381],\n",
+            "        [0.4784],\n",
+            "        [0.4798],\n",
+            "        [0.4705],\n",
+            "        [0.4923]], grad_fn=<SigmoidBackward0>)\n"
           ]
         }
       ],
       "source": [
-        "twin = twin_LSTM(input_size=100, hidden_size=128, output_size=2, dropout=0.5, bidirectional=True)\n",
+        "twin = twin_LSTM(input_size=100, hidden_size=128, output_size=1, dropout=0.5, bidirectional=True)\n",
         "\n",
-        "for batch in loader:\n",
+        "for batch in valloader:\n",
         "    p_padded, h_padded, labels, p_lengths, h_lengths = batch\n",
+        "    print(p_padded.shape, h_padded.shape, labels.shape, p_lengths.shape, h_lengths.shape)\n",
         "    outputs = twin(p_padded, h_padded, p_lengths, h_lengths)\n",
-        "    print(outputs.shape)\n",
+        "    print(outputs)\n",
         "    break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "task = Task(\n",
+        "    model=twin,\n",
+        "    train_df=train_df,\n",
+        "    val_df=val_df,\n",
+        "    save_path=\"best_model.pth\",\n",
+        "    optimizer=torch.optim.Adam(twin.parameters(), lr=0.001),\n",
+        "    loss_fn=nn.BCELoss(),\n",
+        "    device=\"cpu\",\n",
+        "    batch_size=8,\n",
+        "    weighted_sampling=True\n",
+        ")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(0.6943084473258878, 3.9693251533742333)"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "task.fit(epochs=5)"
       ]
     },
     {
